- Added option -gossip to ParseMessages to parse GossipRouter messages (https://issues.redhat.com/browse/JGRP-2694)